renamed plugin to formatNumberInput

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -2,7 +2,7 @@
   "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-  <title>jQuery.formatNumber Test Suite</title>
+  <title>jQuery.formatNumberInput Test Suite</title>
   <link rel="stylesheet" type="text/css" href="lib/jasmine.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js"></script>
@@ -10,8 +10,8 @@
   <script type="text/javascript" src="lib/jasmine-html.js"></script>
   <script type="text/javascript" src="lib/jasmine-jquery-1.1.2.js"></script>
 
-	<script src="src/jquery.formatNumber.js"></script>
-  <script type="text/javascript" src="spec/jquery.formatNumber.spec.js"></script>
+	<script type="text/javascript" src="src/jquery.formatNumberInput.js"></script>
+  <script type="text/javascript" src="spec/jquery.formatNumberInput.spec.js"></script>
 </head>
 <body>
 
