continuing to work on unit tests

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -9,16 +9,17 @@
   <script type="text/javascript" src="lib/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-html.js"></script>
   <script type="text/javascript" src="lib/jasmine-jquery-1.1.2.js"></script>
+  <script type="text/javascript" src="lib/jquery.simulate.js"></script>
 
 	<script type="text/javascript" src="src/jquery.formatNumberInput.js"></script>
   <script type="text/javascript" src="spec/jquery.formatNumberInput.spec.js"></script>
 </head>
 <body>
 
-<script type="text/javascript">
-  jasmine.getEnv().addReporter(new jasmine.TrivialReporter());
-  jasmine.getEnv().execute();
-</script>
+	<script type="text/javascript">
+		jasmine.getEnv().addReporter(new jasmine.TrivialReporter());
+		jasmine.getEnv().execute();
+	</script>
 
 </body>
 </html>
