copied down jquery libraries to lib folder. no longer using google's CDN

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -4,8 +4,8 @@
 <head>
   <title>jQuery.formatNumberInput Test Suite</title>
   <link rel="stylesheet" type="text/css" href="lib/jasmine.css">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js"></script>
+  <script type="text/javascript" src="lib/jquery-1.6.2.min.js"></script>
+  <script type="text/javascript" src="lib/jquery-ui-1.8.5.min.js"></script>
   <script type="text/javascript" src="lib/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-html.js"></script>
   <script type="text/javascript" src="lib/jasmine-jquery-1.1.2.js"></script>
