added sample textbox to SpecRunner and fixed bug with formatWithCommas

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -21,5 +21,11 @@
 		jasmine.getEnv().execute();
 	</script>
 
+	<h2 style="margin-bottom: 0px;">Sample</h2>
+	<input id="sample" type="text" style="width: 150px;" />
+	<script type="text/javascript">
+		$(function() { $('#sample').formatNumberInput(); });
+	</script>
+
 </body>
 </html>
